--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
 							<li id="n1"><a href="lab1/chap1-demo-e.html">实验1-e</a></li>
 						</ol>
 					</td>
+				
+				</tr>
+				<tr>
+					<td id="s"><a>实验2</a>
+						<ol id="n2">
+							<li id="n1"><a href="lab2/chap2-demo-a.html">实验2-a</a></li>
+							<li id="n1"><a href="lab2/chap2-demo-b.html">实验2-b</a></li>
+							<li id="n1"><a href="lab2/chap2-demo-c.html">实验2-c</a></li>
+							<li id="n1"><a href="lab2/chap2-demo-d.html">实验2-d</a></li>
+							<li id="n1"><a href="lab2/chap2-demo-e.html">实验2-e</a></li>
+						</ol>
+					</td>
 				</tr>
 			</table>
 				
