--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<style type="text/css">
 			body{
-				background: url("lab01/2.jpg");
+				background: url("lab1/2.jpg");
 				background-size: cover;
 				background-repeat: no-repeat;
 				background-attachment: fixed;
@@ -17,12 +17,15 @@
 				
 			#nav{
 				float: right;
-				margin-right: 50%;
+				margin-top: -10%;
+				margin-right: 40%;
 			}
 			
 			#main{
+				border: solid;
 				margin-left: 10%;
 				font-size: 20px;
+				width:25%
 			}
 			#footer{
 				/* margin-top: 450px; */ 
@@ -102,6 +105,11 @@
 							<li id="n1"><a href="lab2/chap2-demo-d.html">实验2-d</a></li>
 							<li id="n1"><a href="lab2/chap2-demo-e.html">实验2-e</a></li>
 						</ol>
+					</td>
+				</tr>
+				<tr>
+					<td id="n1"><a href="lab3/demos/ch03/chap3-demo-a.html">实验3</a>
+						
 					</td>
 				</tr>
 			</table>
