--- a/index.html
+++ b/index.html
@@ -108,7 +108,12 @@
 					</td>
 				</tr>
 				<tr>
-					<td id="n1"><a href="lab3/chap3-demo-a.html">实验3</a>
+					<td id="n1"><a href="lab3/ch03/chap3-demo-a.html">实验3</a>
+						
+					</td>
+				</tr>
+				<tr>
+					<td id="n1"><a href="lab4/index.html">实验4</a>
 						
 					</td>
 				</tr>
@@ -123,3 +128,4 @@
 		</div>
 	</body>
 </html>
+
