--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td id="n1"><a href="lab3/ch03/chap3-demo-a.html">实验3</a>
+					<td id="n1"><a href="lab3/chap3-demo-a.html">实验3</a>
 						
 					</td>
 				</tr>
