--- a/course_design/index.html
+++ b/course_design/index.html
@@ -9,23 +9,23 @@
 <script type="text/javascript" src="js2/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" src="js2/jquery-ui-1.8.custom.min.js"></script>
 
-<script type="text/javascript" src="js2/RUpperArm.js"></script>
-<script type="text/javascript" src="js2/RForeArm.js"></script>
-<script type="text/javascript" src="js2/rhand.js"></script>
-<script type="text/javascript" src="js2/LUpperArm.js"></script>
-<script type="text/javascript" src="js2/LForeArm.js"></script>
-<script type="text/javascript" src="js2/lhand.js"></script>
-<script type="text/javascript" src="js2/head_c7_top.js"></script>
-<script type="text/javascript" src="js2/thoraxab.js"></script>
-<script type="text/javascript" src="js2/pelvis.js"></script>
-<script type="text/javascript" src="js2/rthigh.js"></script>
-<script type="text/javascript" src="js2/rshank.js"></script>
-<script type="text/javascript" src="js2/rfoot.js"></script>
-<script type="text/javascript" src="js2/lthigh.js"></script>
-<script type="text/javascript" src="js2/lshank.js"></script>
-<script type="text/javascript" src="js2/lfoot.js"></script>
-<script type="text/javascript" src="js2/sphere.js"></script>
-<script type="text/javascript" src="js2/walker.js"></script>
+<script type="text/javascript" src="RUpperArm.js"></script>
+<script type="text/javascript" src="RForeArm.js"></script>
+<script type="text/javascript" src="rhand.js"></script>
+<script type="text/javascript" src="LUpperArm.js"></script>
+<script type="text/javascript" src="LForeArm.js"></script>
+<script type="text/javascript" src="lhand.js"></script>
+<script type="text/javascript" src="head_c7_top.js"></script>
+<script type="text/javascript" src="thoraxab.js"></script>
+<script type="text/javascript" src="pelvis.js"></script>
+<script type="text/javascript" src="rthigh.js"></script>
+<script type="text/javascript" src="rshank.js"></script>
+<script type="text/javascript" src="rfoot.js"></script>
+<script type="text/javascript" src="lthigh.js"></script>
+<script type="text/javascript" src="lshank.js"></script>
+<script type="text/javascript" src="lfoot.js"></script>
+<script type="text/javascript" src="sphere.js"></script>
+<script type="text/javascript" src="walker.js"></script>
 		<script>
 			var discrimname = "";
 			var discrim=new Array(0);
